# fawx-os

./: .gitignore  AGENTS.md  Cargo.toml  DOCTRINE.md  ENGINEERING.md  README.md  TASTE.md  VISION.md
.github/workflows/: ci.yml
browser/: README.md
browser/crates/fawx-browser-contracts/: Cargo.toml
browser/crates/fawx-browser-contracts/src/: lib.rs
cloud/: README.md
cloud/crates/fawx-cloud-contracts/: Cargo.toml
cloud/crates/fawx-cloud-contracts/src/: lib.rs
device/: README.md
device/crates/fawx-android-adapter/: Cargo.toml
device/crates/fawx-android-adapter/src/: lib.rs
device/crates/fawx-android-probe/: Cargo.toml
device/crates/fawx-android-probe/src/: main.rs
device/crates/fawx-terminal-runner/: Cargo.toml
device/crates/fawx-terminal-runner/src/: main.rs
docs/: progress.md
docs/architecture/: agent-loop-principles.md  android-boundary.md  aosp-escape-analysis.md  aosp-prototype-plan.md  aosp-service-bridge.md  foundation.md  reference-systems.md  rust-ownership.md
docs/specs/: background-task-lifecycle.md  human-handoff-contract.md  local-model-provider.md  permission-safety-boundary.md  pixel-terminal-recon.md  real-task-harness.md  rooted-control-gates.md  substrate-decision-sprint.md  terminal-agent-session.md
kernel/: README.md
kernel/crates/fawx-agent-loop/: Cargo.toml
kernel/crates/fawx-agent-loop/src/: lib.rs
kernel/crates/fawx-harness/: Cargo.toml
kernel/crates/fawx-harness/src/: lib.rs
kernel/crates/fawx-kernel/: Cargo.toml
kernel/crates/fawx-task-store/: Cargo.toml
scripts/: README.md  android-build.sh  android-common.sh  aosp-app-launch-ingest-smoke.sh  aosp-background-supervisor-ingest-smoke.sh  aosp-escape-matrix.sh  aosp-foreground-event-ingest-smoke.sh  aosp-notification-ingest-smoke.sh  aosp-workspace-init.sh  aosp-workspace-preflight.sh  check.sh  pixel-control-gates-smoke.sh  pixel-detached-smoke.sh  pixel-foreground-policy-smoke.sh  pixel-interruption-smoke.sh  pixel-model-approval-smoke.sh  pixel-real-task-harness.sh  pixel-smoke.sh  pixel-substrate-compare-smoke.sh  pixel-substrate-decision-sprint.sh
(+2 files in other folders)
