[package]
name = "fawx-agent-loop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fawx-harness = { path = "../fawx-harness" }
fawx-kernel = { path = "../fawx-kernel" }
fawx-task-store = { path = "../fawx-task-store" }
serde.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
